==> martinberlin/IT8951-esp32-epub-reader/lib/m5Paper/src/M5EPD_Driver.cpp <==
#include <esp_log.h>
#include <esp_err.h>
#include <freertos/FreeRTOS.h>
#include <freertos/task.h>
#include <esp_timer.h>
#include "M5EPD_Driver.h"
#define M5EPD_MAIN_PWR_PIN GPIO_NUM_2
#define M5EPD_EXT_PWR_EN_PIN GPIO_NUM_5
#define M5EPD_EPD_PWR_EN_PIN GPIO_NUM_43 //GPIO_NUM_23
#define M5EPD_CS_PIN GPIO_NUM_15
#define M5EPD_SCK_PIN GPIO_NUM_14
#define M5EPD_MOSI_PIN GPIO_NUM_12
#define M5EPD_BUSY_PIN GPIO_NUM_27
#define M5EPD_MISO_PIN GPIO_NUM_13
#define CHECK(x)                \
    __epdret__ = x;             \
    if (__epdret__ != M5EPD_OK) \
    {                           \
        return __epdret__;      \
    }

m5epd_err_t M5EPD_Driver::begin()
{
    _pin_cs = M5EPD_CS_PIN;
    _pin_busy = M5EPD_BUSY_PIN;

    gpio_reset_pin(_pin_cs);
    gpio_reset_pin(_pin_busy);
    gpio_set_direction(_pin_cs, GPIO_MODE_OUTPUT);
    gpio_set_direction(_pin_busy, GPIO_MODE_INPUT);
    gpio_set_level(M5EPD_CS_PIN, 1);

    // power up the board
    gpio_set_direction(M5EPD_EPD_PWR_EN_PIN, GPIO_MODE_OUTPUT);
    gpio_set_direction(M5EPD_MAIN_PWR_PIN, GPIO_MODE_OUTPUT);
    gpio_set_direction(M5EPD_EXT_PWR_EN_PIN, GPIO_MODE_OUTPUT);
    gpio_set_level(M5EPD_MAIN_PWR_PIN, 1);
    gpio_set_level(M5EPD_EXT_PWR_EN_PIN, 1);
    gpio_set_level(M5EPD_EPD_PWR_EN_PIN, 1);

    // setup SPI output
    esp_err_t ret;
    spi_bus_config_t buscfg = {
        .mosi_io_num = M5EPD_MOSI_PIN,
        .miso_io_num = M5EPD_MISO_PIN,
        .sclk_io_num = M5EPD_SCK_PIN,
        .quadwp_io_num = -1,
        .quadhd_io_num = -1,
        .max_transfer_sz = 0};
    spi_device_interface_config_t devcfg = {.command_bits = 0, ///< Default amount of bits in command phase (0-16), used when ``SPI_TRANS_VARIABLE_CMD`` is not used, otherwise ignored.
                                            .address_bits = 0, ///< Default amount of bits in address phase (0-64), used when ``SPI_TRANS_VARIABLE_ADDR`` is not used, otherwise ignored.
                                            .dummy_bits = 0,   ///< Amount of dummy bits to insert between address and data phase
                                            .mode = 0,         //SPI mode 0
                                            .duty_cycle_pos = 0,
                                            .cs_ena_pretrans = 0,
                                            .cs_ena_posttrans = 0,
                                            .clock_speed_hz = SPI_MASTER_FREQ_80M,
                                            .input_delay_ns = 0,
                                            .spics_io_num = -1, //CS pin
                                            .flags = SPI_DEVICE_NO_DUMMY,
                                            .queue_size = 2,
                                            .pre_cb = NULL,
                                            .post_cb = NULL};
    ret = spi_bus_initialize(SPI3_HOST, &buscfg, SPI_DMA_CH_AUTO);
    if (ret != ESP_OK)
    {
        if (ret == ESP_ERR_INVALID_STATE)
        {
            ESP_LOGI("M5P", "SPI already initialized\n");
        }
        else
        {
            ESP_LOGI("M5P", "SPI initialization failed\n");
        }
    }
    ret = spi_bus_add_device(SPI3_HOST, &devcfg, &spi);
    if (ret != ESP_OK)
    {
        ESP_LOGI("M5P", "spi_bus_add_device Failed %d", ret);
    }
    _tar_memaddr = 0x001236E0;
    _dev_memaddr_l = 0x36E0;
    _dev_memaddr_h = 0x0012;
    CHECK(WriteCommand(IT8951_TCON_SYS_RUN));
    CHECK(WriteReg(IT8951_I80CPCR, 0x0001)); //enable pack write

    //set vcom to -2.30v
    CHECK(WriteCommand(0x0039)); //tcon vcom set command
    CHECK(WriteWord(0x0001));
    CHECK(WriteWord(2300));

    ESP_LOGI("M5P", "Init SUCCESS.");

    return M5EPD_OK;
}

m5epd_err_t M5EPD_Driver::WritePartGram4bpp(uint16_t x, uint16_t y, uint16_t w, uint16_t h, const uint8_t *gram)
{
    _endian_type = IT8951_LDIMG_B_ENDIAN;
    _pix_bpp = IT8951_4BPP;

    // rounded up to be multiple of 4
    if (_direction)
    {
        x = (x + 3) & 0xFFFC;
    }
    else
    {
        x = (x + 3) & 0xFFFC;
        y = (y + 3) & 0xFFFC;
    }

    if (w & 0x03)
    {
        ESP_LOGE("M5P", "Gram width %d not a multiple of 4.", w);
        return M5EPD_NOTMULTIPLE4;
    }

    if (_direction)
    {
        if (x > M5EPD_PANEL_W || y > M5EPD_PANEL_H)
        {
            ESP_LOGW("M5P", "Pos (%d, %d) out of bounds.", x, y);
            return M5EPD_OUTOFBOUNDS;
        }
    }
    else
    {
        if (x > M5EPD_PANEL_H || y > M5EPD_PANEL_W)
        {
            ESP_LOGW("M5P", "Pos (%d, %d) out of bounds.", x, y);
            return M5EPD_OUTOFBOUNDS;
        }
    }

    uint32_t pos = 0;
    // uint64_t length = (w / 2) * h;

    uint16_t word = 0;
    CHECK(SetTargetMemoryAddr(_tar_memaddr));
    CHECK(SetArea(x, y, w, h));
    if (_is_reverse)
    {
        for (uint32_t x = 0; x < ((w * h) >> 2); x++)
        {
            word = gram[pos] << 8 | gram[pos + 1];

            gpio_set_level(_pin_cs, 0);
            write32(word);
            gpio_set_level(_pin_cs, 1);
            pos += 2;
        }
    }
    else
    {
        for (uint32_t x = 0; x < ((w * h) >> 2); x++)
        {
            word = gram[pos] << 8 | gram[pos + 1];
            word = 0xFFFF - word;

            gpio_set_level(_pin_cs, 0);
            write32(word);
            gpio_set_level(_pin_cs, 1);
            pos += 2;
        }
    }
    CHECK(WriteCommand(IT8951_TCON_LD_IMG_END));

    return M5EPD_OK;
}

m5epd_err_t M5EPD_Driver::FillPartGram4bpp(uint16_t x, uint16_t y, uint16_t w, uint16_t h, uint16_t data)
{
    _endian_type = IT8951_LDIMG_B_ENDIAN;
    _pix_bpp = IT8951_4BPP;

    // rounded up to be multiple of 4
    // rounded up to be multiple of 4
    if (_direction)
    {
        x = (x + 3) & 0xFFFC;
    }
    else
    {
        x = (x + 3) & 0xFFFC;
        y = (y + 3) & 0xFFFC;
    }

    if (w & 0x03)
    {
        ESP_LOGD("MP5", "Gram width %d not a multiple of 4.", w);
        return M5EPD_NOTMULTIPLE4;
    }

    if (_direction)
    {
        if (x > M5EPD_PANEL_W || y > M5EPD_PANEL_H)
        {
            ESP_LOGD("MP5", "Pos (%d, %d) out of bounds.", x, y);
            return M5EPD_OUTOFBOUNDS;
        }
    }
    else
    {
        if (x > M5EPD_PANEL_H || y > M5EPD_PANEL_W)
        {
            ESP_LOGD("MP5", "Pos (%d, %d) out of bounds.", x, y);
            return M5EPD_OUTOFBOUNDS;
        }
    }

    // uint64_t length = (w / 2) * h;

    CHECK(SetTargetMemoryAddr(_tar_memaddr));
    CHECK(SetArea(x, y, w, h));
    for (uint32_t x = 0; x < ((w * h) >> 2); x++)
    {
        gpio_set_level(_pin_cs, 0);
        write32(data);
        gpio_set_level(_pin_cs, 1);
    }
    CHECK(WriteCommand(IT8951_TCON_LD_IMG_END));

    return M5EPD_OK;
}

void M5EPD_Driver::WriteGramData(uint16_t data)
{
    gpio_set_level(_pin_cs, 0);
    write32(data);
    // write16(0x0000);
    // write16(data);
    gpio_set_level(_pin_cs, 1);
}

void M5EPD_Driver::ResetDriver(void)
{
    gpio_set_level(_pin_rst, 1);
    gpio_set_level(_pin_rst, 0);
    vTaskDelay(pdMS_TO_TICKS(20));
    gpio_set_level(_pin_rst, 1);
    vTaskDelay(pdMS_TO_TICKS(100));
}

m5epd_err_t M5EPD_Driver::WaitBusy(uint32_t timeout)
{
    int64_t start_time = esp_timer_get_time();
    while (1)
    {
        if (gpio_get_level(_pin_busy) == 1)
        {
            return M5EPD_OK;
        }

        if ((esp_timer_get_time() - start_time) / 1000 > timeout)
        {
            ESP_LOGE("M5P", "Device response timeout.");
            return M5EPD_BUSYTIMEOUT;
        }
    }
}

m5epd_err_t M5EPD_Driver::WriteCommand(uint16_t cmd)
{
    CHECK(WaitBusy());
    gpio_set_level(_pin_cs, 0);
    write16(0x6000);
    CHECK(WaitBusy());
    write16(cmd);
    gpio_set_level(_pin_cs, 1);

    return M5EPD_OK;
}

m5epd_err_t M5EPD_Driver::WriteWord(uint16_t data)
{
    CHECK(WaitBusy());
    gpio_set_level(_pin_cs, 0);
    write16(0x0000);
    CHECK(WaitBusy());
    write16(data);
    gpio_set_level(_pin_cs, 1);

    return M5EPD_OK;
}

m5epd_err_t M5EPD_Driver::ReadWords(uint16_t *buf, uint32_t length)
{
    // uint16_t dummy;
    CHECK(WaitBusy());
    gpio_set_level(_pin_cs, 0);
    write16(0x1000);
    CHECK(WaitBusy());

    //dummy
    write16(0);
    CHECK(WaitBusy());

    for (size_t i = 0; i < length; i++)
    {
        buf[i] = write16(0);
    }

    gpio_set_level(_pin_cs, 1);
    return M5EPD_OK;
}
